# zephyr

./: CODEOWNERS  Jenkinsfile  west.yml
drivers/adc/: Kconfig.mcux  adc_mcux_adc16.c  adc_mcux_adc16_edma.c
drivers/audio/: CMakeLists.txt  Kconfig  Kconfig.dmic_mcux  Kconfig.wm8904  Kconfig.wm8960  dmic_mcux.c  wm8904.c  wm8904.h  wm8960.c  wm8960.h
drivers/clock_control/: clock_control_mcux_ccm.c
drivers/counter/: counter_mcux_pit.c
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.imx_rt  dma_imx_rt.c  dma_imx_rt.h  dma_mcux_edma.c  dma_mcux_lpc.c
drivers/ethernet/: Kconfig.mcux  eth_mcux.c
drivers/flash/: flash_mcux_flexspi_nor.c
drivers/i2c/: i2c_mcux_lpi2c.c
drivers/i2s/: CMakeLists.txt  Kconfig.imx_rt  Kconfig.mcux  i2s_imx_rt.c  i2s_imx_rt.h  i2s_mcux.c  i2s_mcux.h  i2s_mcux_flexcomm.c  i2s_mcux_sai.c
drivers/pinmux/: CMakeLists.txt  Kconfig  Kconfig.imx  Kconfig.mcux  Kconfig.mcux_rt  pinmux_imx.c  pinmux_mcux_rt.c
drivers/spi/: Kconfig.mcux_dspi  spi_mcux_dspi.c
include/audio/: audio_core.h  codec.h
include/drivers/: dma.h  i2s.h  (+1 more)
modules/: Kconfig  Kconfig.mcux  Kconfig.tensflow
scripts/: requirements-base.txt  requirements-build-test.txt  requirements-doc.txt  requirements-extras.txt  requirements-run-test.txt  twister
submanifests/: nxp_hal_dmic_trial.yaml
subsys/: CMakeLists.txt  Kconfig
subsys/audio/: CMakeLists.txt  Kconfig  aduio_dapm.c  audio_core.c  audio_util.c  audo_dai.c
subsys/audio/common/: CMakeLists.txt  Kconfig  audio_common.c  audio_common.h
subsys/audio/machine/: CMakeLists.txt  Kconfig  nxp_rt_dapm.c
(+149 files in other folders)
